k8s-gke/manifests/signoz-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signoz-ingress
  namespace: platform
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - signoz.nilkanthprojects.site
      secretName: signoz-tls
  rules:
    - host: signoz.nilkanthprojects.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: signoz
                port:
                  number: 8080
